--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Blazorise" Version="0.9.0.1" />
+    <PackageReference Include="Blazorise.Bootstrap" Version="0.9.0.1" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
   </ItemGroup>
 
